--- a/src/main/resources/static/chat.css
+++ b/src/main/resources/static/chat.css
@@ -1,19 +1,28 @@
 body {
-	font-family: Helvetica, Arial, sans-serif;
+	font-size: 13px;
+	font-family: Monaco, monospace;
 }
 
 .chat {
   height: 200px;
   width: 600px;
   overflow-y: scroll;
-  background-color: #F5F5F5;
-  border: 3px solid #4F5522;
+  background-color: black;
+  border: 3px solid #778899;
   border-radius: 5px;
-  color: #3B3C3E;
+  color: #FFFFFF;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: normal;
   left: -1px;
   padding: 10px 7px 5px;
+}
+
+.chat-sender {
+	color: #89BDFF;
+}
+
+.chat-recipient {
+	color: #65B042;
 }
 
 #userList {
@@ -23,7 +32,7 @@ body {
 	margin-right: 10px;
 	overflow-y: scroll;
   overflox-x: scroll;
-  border: 1px solid #DDDDDD;
+  border: 3px solid #6495ED;
   border-radius: 5px;
 }
 
@@ -36,14 +45,23 @@ body {
 	bottom: 0;
 	float: left;
 	border-radius: 5px;
+	border: 3px solid #9932CC;
+	outline-width: 0;
 }
 
 .chat-submit {
   bottom: 0;
-  height: 31px;
+  height: 34px;
   width: 60px;
   float: right;
   margin-top: 2px;
+  background-color: #f38709;
+  border: 3px solid #f38709;
+  border-radius: 5px;
+  font-family: Helvetica, Verdana, sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  color: white;
 }
 
 #users {
@@ -51,4 +69,18 @@ body {
 	width: 100%;
 	overflow: auto;
 	border: 0px;
+}
+
+.user-entry {
+	display: block;
+}
+
+.user-selected {
+	background-color: #6495ED;
+	color: white;
+}
+
+.user-unselected {
+	background-color: white;
+  color: black;
 }
